syntax = "proto3";

package webitel.chat; 

option go_package = "github.com/webitel/chat_manager/api/proto/chat/messages";

import "chat/messages/peer.proto";
import "chat/messages/chat.proto";

// Chat Message.
message Message {
  
  // Unique message identifier inside this chat.
  int64 id = 1;

  // Timestamp when this message was sent (published).
  int64 date = 2;
  
  // Sender of the message.
  Peer from = 3;

  // Conversation the message belongs to ..
  Chat chat = 4;
  
  // Chat Sender of the message, sent on behalf of a chat (member).
  Chat sender = 5;

  // Timestamp when this message was last edited.
  int64 edit = 6;

  // // MIME Type of the message, e.g.: text, file, read, status etc.
  // string type = 5;
  
  // Message Text.
  string text = 7;
  
  // Message Media. Attachment. 
  File file = 8;
  
  // Context. Variables. Environment.
  map<string, string> context = 9;

  // Keyboard. Buttons. Quick Replies.
  ReplyMarkup keyboard = 10;

  // Postback. Reply Button Click[ed].
  Postback postback = 11;

  // MIME Type specific content.

  // // Contact info shared.
  // Account contact = 9;

  // // Optional. If the message is a reply,
  // // this is the ID of the original message
  // int64 reply_to_message_id = 10;
  // // External message sent-binding to be able to identify corresponding internal message
  // map<string,string> reply_to_variables = 11;
  // // Unique identifier for the chat where the original message was sent
  // string forward_from_chat_id = 12;
  // // Message identifier in the chat specified in from_chat_id
  // int64 forward_from_message_id = 13;
  // // External message sent-binding to be able to identify corresponding internal message
  // map<string,string> forward_from_variables = 14;
  // // Reply Markup Buttons SET
  // repeated Buttons buttons = 6;
  // // Inline Keyboard Buttons SET
  // repeated Buttons inline = 15;
  

  // // NewChatMembers description for {"type":"joined"} notification
  // repeated Account new_chat_members = 20;
  // // LeftChatMember description for {"type":"left"} notification
  // Account left_chat_member = 21;
}

// Media File.
message File {

  // File location
  string id = 1;

  // string url = 2;

  // Size in bytes
  int64 size = 3;

  // MIME media type
  string type = 4;

  // Filename
  string name = 5;

  // File url (optional)
  string url = 6;
}

message ReplyMarkup {
  // An option used to block input to force
  // the user to respond with one of the buttons.
  bool no_input = 2;
  // Markup of button(s)
  repeated ButtonRow buttons = 1;
}

message ButtonRow {
  // Button(s) in a row
  repeated Button row = 1;
}

message Button {
  // Caption to display.
  string text = 1;
  // Type of request to share contact info
  enum Request {
    // Phone Number
    phone = 0;
    // Email Address
    email = 1;
    // General Form
    contact = 2;
    // Current Location
    location = 3;
  }
  // Type of the button.
  oneof type {
    // URL to navigate to ..
    string url = 2;
    // Postback/Callback data.
    string code = 3;
    // Request to share contact info.
    Request share = 4;
  }
}

// Postback. Reply Button Click[ed].
message Postback {
  // Message ID of the button.
  int64 mid = 1;
  // Data associated with the Button.
  string code = 2;
  // Button's display caption.
  string text = 3;
}

message InputMessage {
  string text = 1;
  InputFile file = 2;
  InputKeyboard keyboard = 3;
}

message InputFile {
  oneof file_source {
    string id = 1;
    string url = 2;
  };

  string source = 3;
}

message InputKeyboard {
  repeated InputButtonRow rows = 1;
}

message InputButtonRow {
  repeated InputButton buttons = 1;
}

message InputButton {
  string caption  = 1;
  string text = 2;
  string type = 3;
  string url = 4;
  string code = 5;
}
